module(
    name                = "re2c",
    version             = "4.0.2",
    compatibility_level = 4,
    bazel_compatibility = [">=8.0.0"]
)

bazel_dep(name = "platforms",      version = "0.0.11")
bazel_dep(name = "bazel_skylib",   version = "1.7.1")
bazel_dep(name = "rules_cc",       version = "0.0.17")
